[package]
name = "cloudflare-access-forwardauth"
version = "2.0.1"
edition = "2024"
license-file = "LICENSE"

[dependencies]
arc-swap = { version = "1.9", default-features = false }
axum = { version = "0.8", default-features = false, features = ["http1", "json", "matched-path", "tokio"] }
axum-extra = { version = "0.12", default-features = false, features = ["typed-header"] }
convert_case = { version = "0.11", default-features = false }
http = { version = "1", default-features = false }
openidconnect = { version = "4", default-features = false, features = ["reqwest", "rustls-tls"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }
serde_yaml_ng = { version = "0.10", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["std", "attributes"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "env-filter", "fmt", "registry", "json"] }
tokio = { version = "1", default-features = false, features = ["macros", "net", "rt", "time"] }
tower-http = { version = "0.6", default-features = false, features = ["trace"] }
